--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.10",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
