--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.6.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "puppeteer": "^1.20.0",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
