--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.10",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "puppeteer": "^1.20.0",
+    "sharp": "^0.23.1",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
