UPDATE: nuevo parámetros

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,7 @@
 NODE_ENV=DEVELOPMENT
-SECRET_REFRESH_TOKEN=secret
-SECRET_TOKEN=secret
-MONGODB_URI=mongouri
+PORT=YOUR_PORT
+VERSION=v2
+BASE_URL=YOUR_URL_HTTP
+SECRET_REFRESH_TOKEN=YOUR_SECRET_REFRESH
+SECRET_TOKEN=YOUR_SECRET
+MONGODB_URI=YOUR_URI
